--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
         <h1>Caça Palavra</h1>
 
-        <div>
+        <div id="exibir">
             
             <table>
 
                 <tbody id="tabela">
-
+                
                     <tr data-js="linha0"></tr>
                     <tr data-js="linha1"></tr>
                     <tr data-js="linha2"></tr>
@@ -26,6 +26,6 @@
             </table>
         </div>
 
-        <script src="script"></script>
+        <script src="script.js"></script>
 </body>
 </html>
